Fix z-index bug

--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,7 @@ main > section {
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: 9;
+    z-index: 7;
     cursor: pointer; }
   .news-slider > .prev {
     transform: translateX(-100%);
