--- a/sass/components/_news-slider.sass
+++ b/sass/components/_news-slider.sass
@@ -7,7 +7,7 @@
     left: 0
     bottom: 0
     right: 0
-    z-index: 9
+    z-index: 7
     cursor: pointer
   > .prev
     transform: translateX(-100%)
